examples/kube-agent/11-validatingpolicy-envoy-allow-all.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: kan-remote-mcp-allow-all
spec:
  evaluation:
    mode: Envoy
  validations:
  - expression: >
      envoy.Allowed().Response()
